# rag101

./: .gitignore  README.md  pyproject.toml
app/: chunking.py  config.py  embeddings.py  generation.py  index_pipeline.py  loader.py  main.py  models.py  query_pipeline.py  vector_store.py
data/: sample.md
rag_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: build_index.py
